third_party/move/move-compiler-v2/tests/more-v1/expansion/duplicate_struct.exp

Diagnostics:
error: duplicate declaration, item, or annotation
  ┌─ tests/more-v1/expansion/duplicate_struct.move:3:12
  │
2 │     struct S {}
  │            - Alias previously defined here
3 │     struct S {}
  │            ^ Duplicate module member or alias 'S'. Top level names in a namespace must be unique
